[package]
name = "rustdsp"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libm = { version = "0.2.8" }
spin = { version = "0.9.8" }
ndarray = { version = "0.16.1", default-features = false }
num = { version = "0.4", default-features = false }


iced = { version = "0.12.1", features = ["canvas", "tokio"], optional = true }
plotters-iced = { version = "0.10.0", optional = true }
plotters = { version = "0.3.6", optional = true }
tokio = { version = "1.39.2", features = ["rt"], optional = true }

[features]
default = ["std", "dep:tokio"]
std = []
gui = ["dep:iced","dep:plotters-iced","dep:plotters", "std"]

[dev-dependencies]
criterion = "0.5.1"

